feat: vertical oriented button group
This commit added a new prop(orientation) to the current OuiButtonGroup,
the possible values are `horizontal` and `vertical`. The default value
is `horizontal` which match the current UI behavior. With `vertical`
prop, the button group will be oriented vertically.

related issue: #659

Signed-off-by: Yulong Ruan <ruanyl@amazon.com>

--- a/src/components/button/button_group/_button_group.scss
+++ b/src/components/button/button_group/_button_group.scss
@@ -51,3 +51,13 @@
     overflow: visible;
   }
 }
+
+.ouiButtonGroup--vertical {
+  .ouiButtonGroup__buttons {
+    flex-direction: column;
+  }
+
+  .ouiButtonGroup__buttons {
+    height: auto;
+  }
+}
