Adjust background color of `OuiToolTip`
Signed-off-by: Josh Romero <rmerqg@amazon.com>

--- a/src/themes/oui-next/global_styling/variables/_tool_tip.scss
+++ b/src/themes/oui-next/global_styling/variables/_tool_tip.scss
@@ -9,7 +9,7 @@
  * GitHub history for details.
  */
 
-$ouiTooltipBackgroundColor: tintOrShade($ouiColorFullShade, 25%, 100%) !default;
+$ouiTooltipBackgroundColor: #293847 !default;
 
 $ouiTooltipAnimations: (
   top: ouiToolTipTop,
