--- a/src/global_styling/variables/_collapsible_nav.scss
+++ b/src/global_styling/variables/_collapsible_nav.scss
@@ -10,6 +10,8 @@
  */
 
 // Should be same as OuiFlyout background color
+$ouiCollapsibleNavBackgroundColor: null !default;
+
 $ouiCollapsibleNavGroupNoneBackgroundColor: inherit !default;
 
 $ouiCollapsibleNavGroupLightBackgroundColor: $ouiPageBackgroundColor !default;
@@ -26,6 +28,8 @@ $ouiCollapsibleNavGroupDarkHighContrastColor: makeGraphicContrastColor(
 
 
 /* OUI -> EUI Aliases */
+$euiCollapsibleNavBackgroundColor: $ouiCollapsibleNavBackgroundColor;
+$euiCollapsibleNavGroupNoneBackgroundColor: $ouiCollapsibleNavGroupNoneBackgroundColor;
 $euiCollapsibleNavGroupLightBackgroundColor: $ouiCollapsibleNavGroupLightBackgroundColor;
 $euiCollapsibleNavGroupDarkBackgroundColor: $ouiCollapsibleNavGroupDarkBackgroundColor;
 $euiCollapsibleNavGroupDarkHighContrastColor: $ouiCollapsibleNavGroupDarkHighContrastColor;
