Fix collapsible nav build error
Signed-off-by: Matt Provost <provomat@amazon.com>

--- a/src/components/collapsible_nav/_collapsible_nav.scss
+++ b/src/components/collapsible_nav/_collapsible_nav.scss
@@ -16,5 +16,7 @@
 }
 
 .ouiCollapsibleNav.ouiFlyout {
-  background-color: $ouiCollapsibleNavBackgroundColor;
+  @if $ouiCollapsibleNavBackgroundColor != false {
+    background-color: $ouiCollapsibleNavBackgroundColor;
+  }
 }
