--- a/src/global_styling/variables/_collapsible_nav.scss
+++ b/src/global_styling/variables/_collapsible_nav.scss
@@ -10,7 +10,7 @@
  */
 
 // Should be same as OuiFlyout background color
-$ouiCollapsibleNavBackgroundColor: null !default;
+$ouiCollapsibleNavBackgroundColor: false !default;
 
 $ouiCollapsibleNavGroupNoneBackgroundColor: inherit !default;
 
