Fix in derive sass variable types
Signed-off-by: Matt Provost <provomat@amazon.com>

--- a/src/global_styling/variables/_collapsible_nav.scss
+++ b/src/global_styling/variables/_collapsible_nav.scss
@@ -10,7 +10,7 @@
  */
 
 // Should be same as OuiFlyout background color
-$ouiCollapsibleNavBackgroundColor: unset !default;
+$ouiCollapsibleNavBackgroundColor: null !default;
 
 $ouiCollapsibleNavGroupNoneBackgroundColor: inherit !default;
 
