--- a/src/global_styling/utility/_utility.scss
+++ b/src/global_styling/utility/_utility.scss
@@ -22,6 +22,7 @@
 .oui-displayBlock {display: block !important;}
 .oui-displayInline {display: inline !important;}
 .oui-displayInlineBlock {display: inline-block !important;}
+.oui-displayNone {display: none !important;}
 
 .oui-fullWidth {
   display: block !important;
