fixing typo line 55 file _flex_item.scss
Signed-off-by: Samuel Valdes Gutierrez <valdesgutierrez@gmail.com>

--- a/src/components/flex/_flex_item.scss
+++ b/src/components/flex/_flex_item.scss
@@ -53,7 +53,7 @@
     }
   }
 
-  $flexBasisOptions: 'auto', 'max-content', 'min-content', 'fit-content'; /* 3 */
+  $flexBasisOptions: auto, max-content, min-content, fit-content; /* 3 */
 
   @each $basis in $flexBasisOptions { /* 3 */
     .ouiFlexItem--flexBasis#{$basis} { /* 3 */
