updating jest unit-testing snapshoots
Signed-off-by: Samuel Valdes Gutierrez <valdesgutierrez@gmail.com>

--- a/src/components/flex/_flex_item.scss
+++ b/src/components/flex/_flex_item.scss
@@ -56,7 +56,7 @@
   $flexBasisOptions: auto, max-content, min-content, fit-content; /* 3 */
 
   @each $basis in $flexBasisOptions { /* 3 */
-    .ouiFlexItem--flexBasis#{$basis} { /* 3 */
+    &.ouiFlexItem--flexBasis-#{$basis} { /* 3 */
       flex-basis: $basis; /* 3 */
     }
   }
