--- a/src/components/tree_view/tree_view.scss
+++ b/src/components/tree_view/tree_view.scss
@@ -55,6 +55,11 @@
 
 }
 
+.ouiTreeView_ouiFacetButton {
+  text-align-last: center;
+  padding: none;
+}
+
 .ouiTreeView__nodeLabel {
   @include ouiTextTruncate;
 }
