--- a/src/components/tree_view/tree_view.scss
+++ b/src/components/tree_view/tree_view.scss
@@ -60,7 +60,7 @@
 }
 
 .ouiTreeView__iconWrapper {
-  margin-top: calc(-1 * $ouiSizeXS / 2);
+  margin-top: calc($ouiSizeXS / -2);
   margin-right: $ouiSizeS;
 
   // This helps tokens appear vertically centered
