Split Button - initial concept.  Includes Docs update.
Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -70,6 +70,7 @@
 @import 'spacer/index';
 @import 'search_bar/index';
 @import 'selectable/index';
+@import 'split_button/index';
 @import 'stat/index';
 @import 'steps/index';
 @import 'suggest/index';
