--- a/src/components/split_button/_split_button_control.scss
+++ b/src/components/split_button/_split_button_control.scss
@@ -16,9 +16,6 @@
  */
 
 .ouiSplitButtonControl {
-  @include ouiFormControlStyle;
-  @include ouiFormControlWithIcon($side: 'right'); /* 1 */
-  @include ouiFormControlIsLoading($isNextToIcon: true);
 
   display: block; /* 3 */
   text-align: left;
@@ -30,12 +27,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 
-  &-isInvalid {
-    @include ouiFormControlInvalidStyle;
-  }
-
   &--compressed {
-    @include ouiFormControlWithIcon($side: 'right', $compressed: true); /* 1 */
     line-height: $ouiFormControlCompressedHeight; /* 2 */
     padding-top: 0; /* 2 */
     padding-bottom: 0; /* 2 */
@@ -44,4 +36,23 @@
   &.ouiSplitButtonControl--isOpen__button { // since this is a button, we also want the visual indicator of active when options are shown
     @include ouiFormControlFocusStyle;
   }
+
+
+
 }
+
+.ouiSplitButtonControl--primary {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-right: none;
+  margin-right: -1px;
+
+}
+
+.ouiSplitButtonControl--dropdown {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+
+  border-left: $ouiBorderThin;
+}
+
