--- a/src/components/split_button/_split_button_control.scss
+++ b/src/components/split_button/_split_button_control.scss
@@ -9,50 +9,26 @@
  * GitHub history for details.
  */
 
-/**
- * 1. Leave room for caret.
- * 2. Ensure the descenders don't get cut off
- * 3. Makes sure the height is correct when there's no selection
- */
-
-.ouiSplitButtonControl {
-
-  display: block; /* 3 */
-  text-align: left;
-  line-height: $ouiFormControlHeight; /* 2 */
-  padding-top: 0; /* 2 */
-  padding-bottom: 0; /* 2 */
-  // Truncate the text
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-
-  &--compressed {
-    line-height: $ouiFormControlCompressedHeight; /* 2 */
-    padding-top: 0; /* 2 */
-    padding-bottom: 0; /* 2 */
-  }
-
-  &.ouiSplitButtonControl--isOpen__button { // since this is a button, we also want the visual indicator of active when options are shown
-    @include ouiFormControlFocusStyle;
-  }
-
-
-
-}
-
 .ouiSplitButtonControl--primary {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  border-right: none;
-  margin-right: -1px;
 
+  border-right-color: $ouiBorderThick;
 }
 
 .ouiSplitButtonControl--dropdown {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 
-  border-left: $ouiBorderThin;
+
+  border-left-color: $ouiBorderThick;
 }
 
+.ouiButton--fill {
+  &.ouiSplitButtonControl--primary {
+    border-right-color: $ouiColorLightShade;
+  }
+  &.ouiSplitButtonControl--dropdown {
+    border-left-color: $ouiColorLightShade;
+  }
+}
