SplitButton handle keyboard control.  Unify CSS automation.  Allow onClick/href for each option item.
Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

--- a/src/components/split_button/_split_button_control.scss
+++ b/src/components/split_button/_split_button_control.scss
@@ -9,9 +9,13 @@
  * GitHub history for details.
  */
 
+// sass-lint:disable no-vendor-prefixes
 .ouiSplitButton {
-  .ouiButton, .ouiButtonIcon {
-    &:hover, &:focus, &:active {
+  .ouiButton,
+  .ouiButtonIcon {
+    &:hover,
+    &:focus,
+    &:active {
       -webkit-transform: none;
       transform: none;
     }
