Split Button - initial concept.  Includes Docs update. (#1193)
* Split Button - initial concept.  Includes Docs update.

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* WIP SplitButton w/ Popover wrapper and dropdown list

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Style primary control w/ hairline separator

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Hairline Styling -- more

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Setup SplitButton doc Basic/States

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Convert SplitButton to React FC

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Set correct SplitButton doc Basic,States

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* SplitButton tests and updated docs

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Cleanup test and doc lint

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Changelog SplitButton

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Automate CSS Y-axis with buttons in tandem.

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* SplitButton handle keyboard control.  Unify CSS automation.  Allow onClick/href for each option item.

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* SplitButton popover correct keyboard interaction

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Border and hairline colors corrected.
Popover styling and keyboard control corrected.

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* many many nits.
code cleanup.
propagate optional props into their target components
recover Change Demo doc.

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* lint fixes and test cleanup.

Signed-off-by: Peter Fitzgibbons <peter.fitzgibbons@gmail.com>

* Copyrigh

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,12 +1,6 @@
-/*!
+/*
+ * Copyright OpenSearch Contributors
  * SPDX-License-Identifier: Apache-2.0
- *
- * The OpenSearch Contributors require contributions made to
- * this file be licensed under the Apache-2.0 license or a
- * compatible open source license.
- *
- * Modifications Copyright OpenSearch Contributors. See
- * GitHub history for details.
  */
 
 // Components
@@ -70,6 +64,7 @@
 @import 'spacer/index';
 @import 'search_bar/index';
 @import 'selectable/index';
+@import 'split_button/index';
 @import 'stat/index';
 @import 'steps/index';
 @import 'suggest/index';
