--- a/src/components/resizable_container/_resizable_collapse_button.scss
+++ b/src/components/resizable_container/_resizable_collapse_button.scss
@@ -40,7 +40,9 @@
 
   &:not(:focus):not(:active):not(.ouiResizableToggleButton-isVisible):not(.ouiResizableToggleButton-isCollapsed) {
     @include ouiScreenReaderOnly;
-    margin: -2px; // To accomodate ouiButtonIcon's border
+    border-width: 0;
+    height: 0;
+    width: 0;
   }
 }
 
