Update button groups to use small font size and changelog
Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

--- a/src/components/button/button_group/_button_group_button.scss
+++ b/src/components/button/button_group/_button_group_button.scss
@@ -12,7 +12,7 @@
 .ouiButtonGroupButton {
   @include ouiButtonBase;
   @include ouiFont;
-  @include ouiFontSize;
+  @include ouiFontSizeS;
 
   // sass-lint:disable-block indentation
   transition: background-color $ouiAnimSpeedNormal ease-in-out,
