feat: use faster animations for modals, popovers, and tooltips
Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -27,7 +27,7 @@
   border-radius: $ouiBorderRadius;
   z-index: $ouiZModal;
   min-width: $ouiFormMaxWidth;
-  animation: ouiModal $ouiAnimSpeedSlow $ouiAnimSlightBounce;
+  animation: ouiModal $ouiAnimSpeedExtraFast $ouiAnimSlightBounce;
   max-width: calc(100vw - #{$ouiSize});
 
   // Remove the outline from the focusable container
