feat: adjust popover and context menu title styles and tooltip padding
Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

--- a/src/components/context_menu/_context_menu_panel.scss
+++ b/src/components/context_menu/_context_menu_panel.scss
@@ -62,7 +62,7 @@
   }
 
   &--small {
-    @include ouiPopoverTitle('s');
+    @include ouiPopoverTitle;
     padding: ($ouiSizeS * .75) $ouiSizeS;
   }
 }
