--- a/src/components/tool_tip/_tool_tip.scss
+++ b/src/components/tool_tip/_tool_tip.scss
@@ -14,7 +14,7 @@
  */
 
 .ouiToolTip {
-  @include ouiToolTipStyle;
+  @include ouiToolTipStyle('s');
   @include ouiToolTipAnimation('top');
   position: absolute;
   opacity: 0;
