feat: remove Button translations and add inset shadow on active
Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -107,6 +107,10 @@
           background-color: darken($color, 5%);
           border-color: darken($color, 5%);
         }
+
+        &:active {
+          @include ouiSlightShadowActive(darken($color, 10%), .4);
+        }
       }
     }
 
@@ -126,6 +130,10 @@
       &:focus-within {
         @include ouiSlightShadowHover($shadowColor);
         background-color: transparentize($color, .9);
+      }
+
+      &:active {
+        @include ouiSlightShadowActive($color);
       }
     }
   }
