--- a/src/themes/oui-next/global_styling/mixins/_button.scss
+++ b/src/themes/oui-next/global_styling/mixins/_button.scss
@@ -26,19 +26,7 @@
 // Adds the focus (and hover) animation for translating up 1px
 @mixin ouiButtonFocus {
   @include ouiCanAnimate {
-    transition: transform $ouiAnimSpeedNormal ease-in-out, background $ouiAnimSpeedNormal ease-in-out;
-
-    &:hover:not([class*='isDisabled']) {
-      transform: translateY(-1px);
-    }
-
-    &:focus {
-      animation: ouiButtonActive $ouiAnimSpeedNormal $ouiAnimSlightBounce;
-    }
-
-    &:active:not([class*='isDisabled']) {
-      transform: translateY(1px);
-    }
+    transition: background $ouiAnimSpeedNormal ease-in-out;
   }
 }
 
