--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -96,6 +96,7 @@ $ouiButtonEmptyTypes: (
       // Ghost is unique and ALWAYS sits against a dark background.
       color: $color;
     } @else if ($name == 'text') {
+      line-height: inherit;
       // The default color is lighter than the normal text color, make the it the text color
       color: $ouiTextColor;
     } @else {
