--- a/src/components/date_picker/super_date_picker/quick_select_popover/_quick_select_popover.scss
+++ b/src/components/date_picker/super_date_picker/quick_select_popover/_quick_select_popover.scss
@@ -23,9 +23,11 @@
 }
 
 // sass-lint:disable no-important
-.ouiQuickSelectPopover__buttonText {
-  // Override specificity from universal and sibling selectors
-  margin-right: $ouiSizeXS !important;
+.ouiFormControlLayout__prepend{
+  .ouiQuickSelectPopover__buttonText {
+    // Override specificity from universal and sibling selectors
+    margin-right: calc($ouiSizeXS/2) !important;
+  }
 }
 
 .ouiQuickSelectPopover__anchor {
