--- a/src/components/split_button/_split_button_control.scss
+++ b/src/components/split_button/_split_button_control.scss
@@ -46,7 +46,7 @@ $splitButtonSeparatorColor: shade($ouiColorPrimary, 50%);
 
   .ouiSplitButtonControl {
     border: $ouiBorderWidthThick solid $ouiBorderColor;
-    border-radius: $ouiBorderRadius;
+    border-radius: $ouiButtonBorderRadius;
   }
 
   // Create button modifiers based upon the map.
