update colors and typography
Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

--- a/src/themes/v9/global_styling/reset/_reset.scss
+++ b/src/themes/v9/global_styling/reset/_reset.scss
@@ -60,7 +60,7 @@ em {
 }
 
 strong {
-  font-weight: $ouiFontWeightSemiBold;
+  font-weight: $ouiFontWeightBold;
 }
 
 /* HTML5 display-role reset for older browsers */
