--- a/src/themes/v9/global_styling/variables/_colors.scss
+++ b/src/themes/v9/global_styling/variables/_colors.scss
@@ -17,7 +17,7 @@ $ouiColorGhost: #FFFFFF !default;
 $ouiColorInk: #131313 !default;
 
 // Core
-$ouiColorPrimary: #002E47 !default;
+$ouiColorPrimary: #003B5C !default;
 $ouiColorSecondary: #0249D8 !default;
 $ouiColorAccent: #B92FC5 !default;
 
@@ -27,7 +27,7 @@ $ouiColorWarning: #ED9F00 !default;
 $ouiColorDanger: #C84133 !default;
 
 // Grays
-$ouiColorEmptyShade: #F5F5F5 !default;
+$ouiColorEmptyShade: #FFFFFF !default;
 $ouiColorLightestShade: #E5E5E5 !default;
 $ouiColorLightShade: #CDCDCD !default;
 $ouiColorMediumShade: #AFAFAF !default;
@@ -53,7 +53,7 @@ $ouiColorWarningText: #986600 !default;
 $ouiColorDangerText: #973A2E !default;
 $ouiColorDisabledText: #AFAFAF !default;
 $ouiColorSuccessText: #0D6453 !default;
-$ouiLinkColor: #1C65F8 !default;
+$ouiLinkColor: #2452AD !default;
 
 // Visualization colors
 
