Update styling for empty button and date picker icon (#1342)
* update styling for empty button and date picker icon

Signed-off-by: Shenoy Pratik <sgguruda@amazon.com>

* move line-height to empty button class

Signed-off-by: Shenoy Pratik <sgguruda@amazon.com>

* update changelog

Signed-off-by: Shenoy Pratik <sgguruda@amazon.com>

* remove specificity for QuickSelectPopover

Signed-off-by: Shenoy Pratik <sgguruda@amazon.com>

* fix formatting in for calc

Signed-off-by: Shenoy Pratik <sgguruda@amazon.com>

---------

Signed-off-by: Shenoy Pratik <sgguruda@amazon.com>

--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -25,6 +25,7 @@
   animation: none !important; /* 1 */
   transition-timing-function: ease-in; /* 2 */
   transition-duration: $ouiAnimSpeedFast; /* 2 */
+  line-height: inherit;
 
   .ouiButtonEmpty__content {
     padding: 0 $ouiSizeS;
