--- a/src/components/date_picker/super_date_picker/quick_select_popover/_quick_select_popover.scss
+++ b/src/components/date_picker/super_date_picker/quick_select_popover/_quick_select_popover.scss
@@ -25,7 +25,7 @@
 // sass-lint:disable no-important
 .ouiQuickSelectPopover__buttonText {
   // Override specificity from universal and sibling selectors
-  margin-right: $ouiSizeXS !important;
+  margin-right: calc($ouiSizeXS / 2) !important;
 }
 
 .ouiQuickSelectPopover__anchor {
