--- a/src/components/date_picker/super_date_picker/_super_date_picker.scss
+++ b/src/components/date_picker/super_date_picker/_super_date_picker.scss
@@ -82,7 +82,7 @@
 }
 
 .ouiSuperDatePicker__prettyFormatLink {
-  color: $ouiLinkColor;
+  color: $ouiColorPrimaryText;
   padding-left: $ouiSizeXS; // Adds some separation between date text and link
   flex-shrink: 0;
 }
