--- a/src/themes/v9/global_styling/mixins/_form.scss
+++ b/src/themes/v9/global_styling/mixins/_form.scss
@@ -155,7 +155,7 @@
 
 // 1. Must supply both values to background-size or some browsers apply the single value to both directions
 
-@mixin ouiFormControlDefaultShadow($borderOnly: false) {
+@mixin ouiFormControlDefaultShadow($borderOnly: true) {
   // sass-lint:disable-block indentation
   background-color: tintOrShade($ouiColorEmptyShade, 0%, 40%);
   background-repeat: no-repeat;
@@ -163,6 +163,14 @@
 
   @if ($borderOnly) {
     box-shadow: inset 0 0 0 1px $ouiFormBorderColor;
+
+    // show shadow on hover/focus in this mode
+    &:hover,
+    &:focus {
+      box-shadow:
+        #{$ouiFormControlBoxShadow},
+        inset 0 0 0 1px $ouiFormBorderColor;
+    }
   } @else {
     box-shadow:
       #{$ouiFormControlBoxShadow},
@@ -296,7 +304,7 @@
 }
 
 @mixin ouiFormControlStyleCompressed($borderOnly: false, $includeStates: true) {
-  @include ouiFormControlDefaultShadow($borderOnly: false);
+  @include ouiFormControlDefaultShadow($borderOnly: true);
   padding: $ouiFormControlCompressedPadding;
   border-radius: $ouiFormControlCompressedBorderRadius;
 
