Fix compressed styling of OuiDatePickerRange
Signed-off-by: Miki <miki@amazon.com>

--- a/src/components/date_picker/_date_picker_range.scss
+++ b/src/components/date_picker/_date_picker_range.scss
@@ -15,6 +15,11 @@
 
 .ouiDatePickerRange {
   @include ouiFormControlSize(auto, $includeAlternates: true);
+
+  .ouiDatePicker.ouiFieldText--compressed {
+    height: $ouiFormControlLayoutGroupInputCompressedHeight;
+  }
+
   // Match just the regular drop shadow of inputs
   @include ouiFormControlDefaultShadow();
   display: flex;
