fix: updates to v9 theme colors (#1402)
* fix: updates to v9 theme colors

Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

* Use tokens for button colors

Co-authored-by: Miki <amoo_miki@yahoo.com>
Signed-off-by: Viraj Sanghvi <virajs@amazon.com>

---------

Signed-off-by: Viraj Sanghvi <virajs@amazon.com>
Co-authored-by: Miki <amoo_miki@yahoo.com>

--- a/src/themes/v9/global_styling/variables/_buttons.scss
+++ b/src/themes/v9/global_styling/variables/_buttons.scss
@@ -14,11 +14,11 @@ $ouiButtonHeightSmall: $ouiSizeXL !default;
 $ouiButtonHeightXSmall: $ouiSizeL !default;
 
 // sass-lint:disable no-color-literals
-$ouiButtonColorDisabled: lightOrDarkTheme(#AFAFAF, #595F64) !default;
+$ouiButtonColorDisabled: lightOrDarkTheme($ouiColorMediumShade, $ouiColorLightShade) !default;
 // Only increase the contrast of background color to text to 2.0 for disabled
-$ouiButtonColorDisabledText: #8E8E8E !default;
+$ouiButtonColorDisabledText: lightOrDarkTheme(#8E8E8E, #585858) !default;
 // sass-lint:disable no-color-literals
-$ouiButtonColorGhostDisabled: lightOrDarkTheme($ouiColorDarkShade, #585858) !default;
+$ouiButtonColorGhostDisabled: lightOrDarkTheme(#585858, #353535) !default;
 
 $ouiButtonBorderRadius: 0 !default;
 
